@@ -18,6 +18,12 @@ Changelog
   (they ommitted the max array length parameter of the format). Backported from
   3.1.2. (#199)
 
+- Slightly refactored how tables containing variable-length array columns are
+  handled to add two improvements: Fixes an issue where accessing the data
+  after a call to the `pyfits.getdata` convenience function caused an
+  exception, and allows the VLA data to be read from an existing mmap of the
+  FITS file. (#200)
+
 - Fixed a bug that could occur when opening a table containing
   multi-dimensional columns (i.e. via the TDIMn keyword) and then writing it
   out to a new file. Backported from 3.1.2. (#201)
